<resources>
    <string name="app_name">Themplay</string>
    <string name="app_name_ready">Themplay is ready</string>
    <string name="app_upgraded">Application upgraded to version {0}. Check out what\'s new.</string>
    <string name="app_version">Application version</string>
    <string name="app_crashed">Application crashed. A log has been created. Please contact the developer</string>
    <string name="item_menu">Item menu</string>
    <string name="song_name">Song name</string>
    <string name="settings">Settings</string>
    <string name="about">About and help</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="delete">delete</string>
    <string name="toggle_night_mode">Toggle night mode</string>
    <string name="presets">Presets</string>
    <string name="presets_click_to_create">Click here to create or select presets</string>
    <string name="presets_add">Add new preset</string>
    <string name="presets_name">Unique preset name</string>
    <string name="presets_name_update_hint">Warning. If preset is active and playing, it will stop current playback</string>
    <string name="presets_add_atLeastOneChar">Your preset name must have at least single character!</string>
    <string name="playlist_already_exists">Playlist with name \"{0}\" already exists in this preset</string>
    <string name="playlist_add_error">There was an error while trying to add playlist</string>
    <string name="presets_create_first">Please activate preset before creating playlist</string>
    <string name="presets_created">Preset \"{0}\" created</string>
    <string name="presets_activated">Preset \"{0}\" is now active</string>
    <string name="presets_saved">Preset contents were saved to file \"{0}\" </string>
    <string name="presets_please_wait">Please wait…saving preset</string>
    <string name="presets_saved_errors">Preset contents were saved to file \"{0}\" , but there were errors, please check logs in {1} file  </string>
    <string name="presets_already_exists">Preset with name \"{0}\" already exists and it must be unique</string>
    <string name="preset_make_active">Make active</string>
    <string name="preset_delete">Delete preset</string>
    <string name="preset_export">Export preset</string>
    <string name="preset_update">Update preset name</string>
    <string name="preset_delete_confirm">Are you sure you want to delete preset \"{0}\"? \nAll it\'s playlists will be also deleted.\nThis operation cannot be undone</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_add_new_playlist">Add new playlist</string>
    <string name="playlist_encourage_add_new_playlist">Open menu to add your first playlist</string>
    <string name="playlist_view_playlist">View playing order</string>
    <string name="playlist_edit_playlist">Edit playlist</string>
    <string name="playlist_delete_playlist">Delete playlist</string>
    <string name="playlist_change_look">Change playlist look</string>
    <string name="playlist_copy">Copy playlist</string>
    <string name="playlist_paste">Paste playlist</string>
    <string name="playlist_pasted">Copy of playlist created</string>
    <string name="playlist_copied">Playlist copied</string>
    <string name="playlist_paste_error">There was an error while trying to paste playlist, please try again</string>
    <string name="playlist_look_preview">Preview</string>
    <string name="playlist_look_active">Active</string>
    <string name="playlist_look_inactive">Inactive</string>
    <string name="playlist_look_change_text_color">Change text color</string>
    <string name="playlist_look_change_background">Change background</string>
    <string name="playlist_look_remove_background">Remove background</string>
    <string name="playlist_look_song">Some cool song.mp3</string>
    <string name="playlist_look_text_outline">Add shadow outline around text</string>
    <string name="playlist_look_default">default</string>
    <string name="playlist_look_white">white</string>
    <string name="playlist_look_black">black</string>
    <string name="playlist_look_blue">blue</string>
    <string name="playlist_look_green">green</string>
    <string name="playlist_look_red">red</string>
    <string name="playlist_look_yellow">yellow</string>
    <string name="playlist_look_gray">gray</string>
    <string name="playlist_look_violet">violet</string>
    <string name="playlist_delete_playlist_confirm">Are you sure you want to delete playlist \"{0}\"?</string>
    <string name="playlist_now_playing">Now playing \"{0}\"</string>
    <string name="playlist_no_playlists">There are no playlists to play. Add one first</string>
    <string name="playlist_no_active_playlist">Playlist ist not active or there are not enough songs to play</string>
    <string name="playlist_active_no_songs">Playlist \"{0}\" has no songs in it, and cannot be activated</string>
    <string name="playlist_name_atLeastOneChar">Please enter at least single character!</string>
    <string name="playlist_add_atLeastOneChar">Your playlist name must have at least single character!</string>
    <string name="playlist_add_created">New playlist \"{0}\" created</string>
    <string name="playlist_cant_play">Cannot Play Song \"{0}\"!</string>
    <string name="playlist_add_new_song">Add new song</string>
    <string name="playlist_settings_song_close">Ready</string>
    <string name="playlist_settings_songs_update">Edit</string>
    <string name="playlist_added_new_songs">New song(s) were added</string>
    <string name="playlist_add_songs_error">Error while trying to add songs to playlist</string>
    <string name="playlist_remove_selected">Remove selected songs</string>
    <string name="playlist_removed_selected_songs">Selected songs removed</string>
    <string name="playlist_remove_songs_error">Error while trying to remove songs from playlist</string>
    <string name="media_playback_attribution_label">Music Playback</string>
    <!-- Preference Titles -->
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="goBack">goBack</string>
    <string name="back_arrow">back arrow</string>
    <string name="settings_all">Application settings</string>
    <string name="settings_darkmode">Dark mode</string>
    <string name="settings_darkmode_summary">Should application use dark mode</string>
    <string name="settings_fade">Fade between songs duration</string>
    <string name="settings_fade_error">Enter how long duration should last ( in seconds )</string>
    <string name="settings_keep_screen">Don\'t turn off screen</string>
    <string name="settings_keep_screen_summary">When application is running , keep screen always on </string>
    <string name="playlist_now_playing_notification">Now playing</string>
    <string name="playlist_now_playing_notification_description">Shows which song now plays and shows controls allowing to play/pause/stop/next/previous</string>
    <string name="themplay_notification">Themplay</string>
    <string name="themplay_notification_description">General notifications about Themplay</string>
    <string name="settings_fadeStop">Fade out songs when stopping</string>
    <string name="settings_fadeStop_info">When pressing stop or pause button , song will be faded out instead of stopping right away</string>
    <string name="settings_developer">Developer</string>
    <string name="settings_enable_debug">Enable debug</string>
    <string name="settings_enable_developer_mode">Enable developer mode</string>
    <string name="settings_enable_developer_mode_clicks">Tap {0} times to reveal developer mode</string>
    <string name="settings_enable_developer_mode_unlocked">Developer mode enabled</string>
    <string name="settings_developer_mode_hidden">Developer mode hidden. Tap version 5 times to re-enable.</string>
    <string name="settings_log_download">Download application logs</string>
    <string name="settings_log_downloaded">Files successfully zipped</string>
    <string name="settings_log_no_logs">No logs to be ziped</string>
    <string name="settings_log_no_dir">Unable to use selected directory. Please pick another</string>
    <string name="settings_enable_debug_info">When enabled debug logs will be saved to file  under \nAndroid/data/pl.qprogramming.themplay/files/logs/app_debug_log.txt. \nShould be used only when trying to solve issue together with app developer</string>
</resources>